--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
 		<h1>TIC-TAC-TOE</h1>
 		<table>
 			<tr>
-				<td id="cell_0" class="cell"></td>
-				<td id="cell_1" class="cell"></td>
+				<td id="0" class="cell"></td>
+				<td id="1" class="cell"></td>
 				<td id="cell_2" class="cell"></td>
 			</tr>
 			<tr>
-				<td id="cell_3" class="cell"></td>
-				<td id="cell_4" class="cell"></td>
-				<td id="cell_5" class="cell"></td>
+				<td id="3" class="cell"></td>
+				<td id="4" class="cell"></td>
+				<td id="5" class="cell"></td>
 			</tr>
 			<tr>
-				<td id="cell_6" class="cell"></td>
-				<td id="cell_7" class="cell"></td>
-				<td id="cell_8" class="cell"></td>
+				<td id="6" class="cell"></td>
+				<td id="7" class="cell"></td>
+				<td id="8" class="cell"></td>
 			</tr>
 		</table>
-		<button><strong>RESET</strong></button>
+		<button onClick="restart()"><strong>RESET</strong></button>
 		<h2 class="WINNER"></h2>
 	</div>
+	<script type="text/javascript" src="game.js"></script>
 </body>
 </html>
