change css href

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Tic Tac Toe Board</title>
-	<link rel="stylesheet" type="text/css" href="tictactoe board.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<div class="container">
