--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -7,15 +7,17 @@
 Tic Tac Toe
 </title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <link rel="stylesheet" href="/style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-<div id="container">
+  <script src="/script.js"></script>
+<div id="spinWheel"></div> 
+  <div id="container">
 
 <div class="chooseGame">
 <div class="chooseType"><button id="againstPlayer">Dual Player Mode</button></div>
-<div class="chooseType"><button id="againstAI">Play Against Computer</button></div>
 <div class="chooseType"><button id="compete">Enter Compete Mode</button></div>
 
 <!-- <img src="https://giphy.com/gifs/i9j7a4aUidyhy/html5"> -->
@@ -114,14 +116,36 @@ Tic Tac Toe
 </div>
 <div class="endgame">
 <div class="text"></div>
+<div><button id="spinButton">Try SpinWheel</button></div>
 <button onClick="Replay()">Replay</button>
 </div>
 
 </div>
+<div id="SpinCircle">
+ <div id='mainCircle' class="mainCircle">
+     <div id="box" class="box">
+         <div class="circle1">
+<span id="50" class="span1"><b>50</b></span>
+<span id="150" class="span2"><b>150</b></span>
+<span id="250" class="span3"><b>250</b></span>
+<span id="350" class="span4"><b>350</b></span>
+         </div>
+         <div class="circle2">
+            <span id="10" class="span1"><b>10</b></span>
+            <span id="0" class="span2"><b>0</b></span>
+            <span id="75" class="span3"><b>75</b></span>
+            <span id="300" class="span4"><b>300</b></span>
+         </div> 
+     </div>
+     <button class="spin" onclick="handleSpin()">SPIN</button>
+ </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<div id="status"></div>
+<button id="goBack" type="button" class="btn btn-outline-primary">Back to Main Menu</button>
+</div> 
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<script src="/script.js"></script>
+
 </body>
 </html>
