cheanged cell colour

--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -29,10 +29,10 @@ Tic Tac Toe
 <div id="side">
 
 
-<fieldset class="nameInput">
+<fieldset  class="nameInput">
 <h1>Who's playing??</h1>
-<input id="Player1Name" type="text" placeholder="Player1 Name" required>
-<input id="Player2Name" type="text" placeholder="Player2 Name" required>
+<input  autocomplete="off" id="Player1Name" type="text" placeholder="Player1 Name" required>
+<input  autocomplete="off" id="Player2Name" type="text" placeholder="Player2 Name" required>
 <span >
 <button type="button" id="submitName">Play!!</button>
 </span>
