--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -181,6 +181,22 @@ Tic Tac Toe
             <small><div class="score"></div></small>
             </div>
     </li>
+    <li>
+      <div class="pos6">
+        <mark>
+          <div class="name">
+            </div></mark>
+            <small><div class="score"></div></small>
+            </div>
+    </li>
+    <li>
+      <div class="pos7">
+        <mark>
+          <div class="name">
+            </div></mark>
+            <small><div class="score"></div></small>
+            </div>
+    </li>
   </ol>
 </div>
 </div>
