removed unwanted files

--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -62,21 +62,11 @@ Tic Tac Toe
   </label>
   <label id="level4Label" class="btn btn-info">
     <input type="radio" name="options" id="levelFour"> LEVEL 4
-  </label><!-- 
-  <div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-secondary">1</button>
-  <button type="button" class="btn btn-secondary">2</button>
-  <button type="button" class="btn btn-secondary">3</button>
-  <button type="button" class="btn btn-secondary">4</button> -->
+  </label>
+  
 </div>
 </div>
 </div>
-<!-- <div class="row1">
-<div class="column"><button id="levelOne" >Level 1</button></div>
-<div class="column"><button id="levelTwo" >Level 2</button></div>
-<div class="column"><button id="levelThree" >Level 3</button></div>
-<div class="column"><button id="levelFour" >Level 4</button></div>
-</div> -->
 <div class="options">
 <div class="playerOptions"><button id="restartGame">Restart Game</button></div>
 <div class="playerOptions"><button id="hint">Hint</button></div>
@@ -103,12 +93,7 @@ Tic Tac Toe
 <tr>
 
 <td class="cell" id="0">
-  <!-- <section class="card_container">
-  <div class="card" onclick="flip()">
-    <div class="front"></div>
-    <div class="back"></div>
-  </div>
-</section> -->
+
 </td>
 <td class="cell" id="1"></td>
 <td class="cell" id="2"></td>
